[package]
version = "0.1.0"
name = "primitives"
edition = "2021"

[dependencies]
eyre.workspace = true
ssz-rs.workspace = true
hex.workspace = true
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
superstruct = "0.8.0"
thiserror = "1.0.61"
milagro_bls.workspace = true
ethers-core.workspace = true
common = { path = "../common" }
zduny-wasm-timer = "0.2.8"
