[package]
version = "0.1.0"
name = "primitives"
edition = "2021"

[dependencies]
eyre.workspace = true
ssz-rs.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
superstruct.workspace = true
thiserror.workspace = true
milagro_bls.workspace = true
ethers-core.workspace = true
zduny-wasm-timer.workspace = true

common = { path = "../common" }